# Matilda

./: .gitignore  Notes-TODOs.txt  convertUSAXS.py  environment.yml  matilda.py  matilda_server.service  pyproject.toml  readfromtiled.py  serv_matilda.sh
CodeFragments/: NexusDemoCode.py  convertSAS.py  matilda.py  monitor_instrument.py  test.py
CodeFragments/in screen setup/: matilda-manage.sh
matilda/: convertFlyscan.py  convertFlyscanNew.py  convertSWAXS.py  convertSWAXSNew.py  convertUSAXS.py  desmearing.py  developNewFlyscan.py  hdf5code.py  matilda.py  new_matilda.py  plotData.py  readfromtiled.py  runTests.py  supportFunctions.py
matilda/log/: .loglogin
